# ipfs-telemetry

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Justfile  Makefile  README.adoc  README.md  backend.Containerfile  capture.go  client.go  collector.go  collector_helpers.go  entrypoint.sh  event.go  global.go  go.mod  go.sum  grafana.Containerfile  instrument_wrappers.go  ipfs.Containerfile  meter.go  meter_noop.go  meter_provider.go  meter_provider_noop.go  metric.go  metric_backlogged_json.go  metric_float64.go  metric_int64.go  metric_json.go  monitor.proto  noop.go  orchestrator.fish  prometheus.yml  property.go  property_const_int64.go  property_const_str.go  property_decoders.go  property_helpers.go  property_int.go  (+36 more)
backend/: .dockerignore  .gitignore  Dockerfile  backend.go  env.py  flags.go  go.mod  go.sum  main.py  pyproject.toml
backend/backend/: __main__.py  discovery.py  env.py  exporter.py  monitor.py  prom.py  s3.py  util.py
backend/cmd/: main.go
backend/crawler/: crawler.go  flags.go  main.go  observer_file.go  observer_logger.go  observer_nats.go
backend/db/: __init__.py  connection.py  model.py  telemetry.sql  transform.py
backend/export/: __init__.py  discovery.py  monitor.py
backend/jobs/: export-pg.py  export-vm.py  setup-nats.py  setup-pg.py
backend/monitor/: exporter.go  flags.go  main.go  monitor.go
backend/pg_crawler_exporter/: main.go  main_test.go  schema.sql
backend/pg_monitor_exporter/: main.go  schema.sql
backend/scripts/: geolite_download.sh
docs/: .dockerignore  Dockerfile  mkdocs.yml  pyproject.toml
(+761 files in other folders)
