[tool.poetry]
name = "docs"
version = "0.0.0"
description = ""
authors = ["diogo464 <diogo464@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
